--- a/ImageNet.ipynb
+++ b/ImageNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "15cfd5b5-ef7d-4ed7-b168-5d76ac0ddc24",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,8 @@
     "import jax.numpy as jnp\n",
     "from ott.geometry import costs, pointcloud\n",
     "from ott.tools import sinkhorn_divergence, progot\n",
-    "from ott.problems.linear import linear_problem"
+    "from ott.problems.linear import linear_problem\n",
+    "from ott.solvers.linear import sinkhorn"
    ]
   },
   {
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "5374fcf3",
    "metadata": {},
    "outputs": [],
@@ -559,66 +560,80 @@
     "    return error\n",
     "\n",
     "\n",
-    "def utils__low_rank_distance_factorization(X1, X2, r, eps, device='cpu', dtype=torch.float64):\n",
+    "def utils__low_rank_distance_factorization(X1, X2, r, eps, device='cpu', dtype=jnp.float64):\n",
     "    n = X1.shape[0]\n",
     "    m = X2.shape[0]\n",
-    "    '''\n",
-    "    Indyk '19\n",
-    "    '''\n",
-    "    # low-rank distance matrix factorization of Bauscke, Indyk, Woodruff\n",
-    "    \n",
-    "    t = int(r/eps) # this is poly(1/eps, r) in general -- this t might not achieve the correct bound tightly\n",
-    "    i_star = random.randint(0, n-1)\n",
-    "    j_star = random.randint(0, m-1)\n",
-    "    \n",
-    "    # Define probabilities of sampling\n",
-    "    p = (torch.cdist(X1, X2[j_star][None,:])**2 \\\n",
-    "            + torch.cdist(X1[i_star,:][None,:], X2[j_star,:][None,:])**2 \\\n",
-    "                    + (torch.sum(torch.cdist(X1[i_star][None,:], X2))/m) )[:,0]**2\n",
-    "    \n",
-    "    p_dist = (p / p.sum())\n",
-    "    \n",
-    "    # Use random choice to sample rows\n",
-    "    indices_p = torch.from_numpy(np.random.choice(n, size=(t), p=p_dist.cpu().numpy())).to(device)\n",
-    "    indices_p = indices_p.to(torch.long)\n",
-    "    X1_t = X1[indices_p, :]\n",
-    "    '''\n",
-    "    Frieze '04\n",
-    "    '''\n",
-    "    P_t = torch.sqrt(p[indices_p]*t)\n",
-    "    S = torch.cdist(X1_t, X2)/P_t[:, None] # t x m\n",
-    "    \n",
-    "    # Define probabilities of sampling by row norms\n",
-    "    q = torch.norm(S, dim=0)**2 / torch.norm(S)**2 # m x 1\n",
-    "    q_dist = (q / q.sum())\n",
-    "    # Use random choice to sample rows\n",
-    "    indices_q = torch.from_numpy(np.random.choice(m, size=(t), p=q_dist.cpu().numpy())).to(device)\n",
-    "    indices_q = indices_q.to(torch.long)\n",
-    "    S_t = S[:, indices_q] # t x t\n",
-    "    Q_t = torch.sqrt(q[indices_q]*t)\n",
-    "    W = S_t[:, :] / Q_t[None, :]\n",
-    "    # Find U\n",
-    "    U, Sig, Vh = torch.linalg.svd(W) # t x t for all\n",
-    "    F = U[:, :r] # t x r\n",
-    "    # U.T for the final return\n",
-    "    U_t = (S.T @ F) / torch.norm(W.T @ F) # m x r\n",
-    "    '''\n",
-    "    Chen & Price '17\n",
-    "    '''\n",
-    "    # Find V for the final return\n",
-    "    indices = torch.from_numpy(np.random.choice(m, size=(t))).to(device)\n",
-    "    indices = indices.to(torch.long)\n",
-    "    X2_t = X2[indices, :] # t x dim\n",
-    "    D_t = torch.cdist(X1, X2_t) / np.sqrt(t) # n x t\n",
-    "    Q = U_t.T @ U_t # r x r\n",
-    "    U, Sig, Vh = torch.linalg.svd(Q)\n",
-    "    U = U / Sig # r x r\n",
-    "    U_tSub = U_t[indices, :].T # t x r\n",
-    "    B = U.T @ U_tSub / np.sqrt(t) # (r x r) (r x t)\n",
-    "    A = torch.linalg.inv(B @ B.T)\n",
-    "    Z = ((A @ B) @ D_t.T) # (r x r) (r x t) (t x n)\n",
-    "    V = Z.T @ U\n",
-    "    return V.double(), U_t.T.double()\n",
+    "    t = int(r / eps)  # La taille d'échantillon t\n",
+    "\n",
+    "    # Conversion en tableau JAX\n",
+    "    X1_jax = jnp.array(X1)\n",
+    "    X2_jax = jnp.array(X2)\n",
+    "\n",
+    "    # Étape 1 : Calcul des distances (matrice de coût)\n",
+    "    cost_matrix = jnp.sum((X1_jax[:, None, :] - X2_jax[None, :, :]) ** 2, axis=-1)\n",
+    "\n",
+    "    # Étape 2 : Résolution du problème de transport optimal avec Sinkhorn\n",
+    "    reg_param = 0.1  # Paramètre de régularisation, ajustez si nécessaire\n",
+    "    ot_solution = sinkhorn(cost_matrix, reg_param, niter=1000)\n",
+    "\n",
+    "    # Étape 3 : Calcul des probabilités d'échantillonnage pour X1\n",
+    "    # Pondération selon la solution du transport optimal\n",
+    "    p = jnp.sum(ot_solution, axis=1)**2  # Probabilités pour X1\n",
+    "    p_dist = p / jnp.sum(p)\n",
+    "\n",
+    "    # Échantillonnage des indices pour X1\n",
+    "    indices_p = np.random.choice(n, size=t, p=p_dist)\n",
+    "    X1_t = X1_jax[indices_p]\n",
+    "\n",
+    "    # Étape 4 : Calcul de P_t (ponctions d'échantillonnage)\n",
+    "    P_t = jnp.sqrt(p[indices_p] * t)\n",
+    "\n",
+    "    # Calcul de la matrice S\n",
+    "    S = jax.scipy.spatial.distance.cdist(X1_t, X2_jax) / P_t[:, None]  # t x m\n",
+    "\n",
+    "    # Étape 5 : Calcul des probabilités d'échantillonnage pour X2\n",
+    "    q = jnp.norm(S, axis=0)**2 / jnp.norm(S)**2  # Probabilités pour X2\n",
+    "    q_dist = q / jnp.sum(q)\n",
+    "\n",
+    "    # Échantillonnage des indices pour X2\n",
+    "    indices_q = np.random.choice(m, size=t, p=q_dist)\n",
+    "    S_t = S[:, indices_q]  # t x t\n",
+    "\n",
+    "    # Calcul de Q_t\n",
+    "    Q_t = jnp.sqrt(q[indices_q] * t)\n",
+    "\n",
+    "    # Calcul de la matrice W\n",
+    "    W = S_t / Q_t[None, :]\n",
+    "\n",
+    "    # Étape 6 : Décomposition SVD de W\n",
+    "    U, Sig, Vh = jax.linalg.svd(W)\n",
+    "\n",
+    "    # Filtrage des premiers r vecteurs singuliers\n",
+    "    F = U[:, :r]\n",
+    "\n",
+    "    # Calcul de U_t pour le retour\n",
+    "    U_t = jnp.dot(S.T, F) / jnp.linalg.norm(jnp.dot(W.T, F))\n",
+    "\n",
+    "    # Étape 7 : Utilisation de U_t pour calculer V\n",
+    "    indices = np.random.choice(m, size=t)\n",
+    "    X2_t = X2_jax[indices]\n",
+    "\n",
+    "    D_t = jax.scipy.spatial.distance.cdist(X1_jax, X2_t) / jnp.sqrt(t)\n",
+    "    Q = jnp.dot(U_t.T, U_t)  # Matrice carrée r x r\n",
+    "    U, Sig, Vh = jax.linalg.svd(Q)\n",
+    "    U = U / Sig  # Normalisation\n",
+    "\n",
+    "    U_tSub = U_t[indices, :].T  # t x r\n",
+    "    B = jnp.dot(U.T, U_tSub) / jnp.sqrt(t)\n",
+    "\n",
+    "    # Calcul de A et de Z\n",
+    "    A = jnp.linalg.inv(jnp.dot(B, B.T))\n",
+    "    Z = jnp.dot(jnp.dot(A, B), D_t.T)  # r x t * t x n\n",
+    "\n",
+    "    # Calcul de V\n",
+    "    V = jnp.dot(Z.T, U)\n",
+    "\n",
+    "    return V, U_t.T\n",
     "\n",
     "def utils__hadamard_square_lr(A1, A2, device='cpu'):\n",
     "    \"\"\"\n",
@@ -668,6 +683,8 @@
     "    M2_tilde = torch.einsum(\"ij,ik->ijk\", A2, B2).reshape(n, r * r)\n",
     "    \n",
     "    return M1_tilde, M2_tilde\n",
+    "\n",
+    "# utils__hadamard_lr = lambda (A1, A2, B1, B2): (jnp.einsum(\"ij,ik->ijk\", A1, B1).reshape(A1.shape[0], -1), jnp.einsum(\"ij,ik->ijk\", A2, B2).reshape(A2.shape[0], -1))\n",
     "\n",
     "def utils__LC_proj(X0, X1, Q, R):\n",
     "    \n",
@@ -1446,10 +1463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "782c6457",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'FRLC_opt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mHierarchicalRefinementOT\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m    A class to perform Hierarchical OT refinement with optional (CPU) parallelization.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;124;03m        A list containing the Monge-map pairings\u001b[39;00m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m     37\u001b[0m                 C: torch\u001b[38;5;241m.\u001b[39mTensor,\n\u001b[0;32m     38\u001b[0m                  rank_schedule: List[\u001b[38;5;28mint\u001b[39m],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     46\u001b[0m                  num_processes: Union[\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     47\u001b[0m                 ):\n",
+      "Cell \u001b[1;32mIn[1], line 39\u001b[0m, in \u001b[0;36mHierarchicalRefinementOT\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mHierarchicalRefinementOT\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m    A class to perform Hierarchical OT refinement with optional (CPU) parallelization.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m    \u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;124;03m        A list containing the Monge-map pairings\u001b[39;00m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m     37\u001b[0m                 C: torch\u001b[38;5;241m.\u001b[39mTensor,\n\u001b[0;32m     38\u001b[0m                  rank_schedule: List[\u001b[38;5;28mint\u001b[39m],\n\u001b[1;32m---> 39\u001b[0m                  solver: Callable \u001b[38;5;241m=\u001b[39m \u001b[43mFRLC_opt\u001b[49m,\n\u001b[0;32m     40\u001b[0m                  solver_params: Union[Dict[\u001b[38;5;28mstr\u001b[39m, Any] , \u001b[38;5;28;01mNone\u001b[39;00m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m     41\u001b[0m                  device: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     42\u001b[0m                  base_rank: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m,\n\u001b[0;32m     43\u001b[0m                  clustering_type: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msoft\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     44\u001b[0m                  plot_clusterings: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     45\u001b[0m                  parallel: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     46\u001b[0m                  num_processes: Union[\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     47\u001b[0m                 ):\n\u001b[0;32m     49\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mC \u001b[38;5;241m=\u001b[39m C\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m     50\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrank_schedule \u001b[38;5;241m=\u001b[39m rank_schedule\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'FRLC_opt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class HierarchicalRefinementOT:\n",
     "    \"\"\"\n",
@@ -1728,11 +1758,6 @@
     "            return self.Monge_clusters\n",
     "        else:\n",
     "            return self._compute_coupling_from_Ft()\n",
-    "    \n",
-    "    \n",
-    "    def _hierarchical_refinement_parallelized():\n",
-    "        # In separate file, without low-rank distance matrix for the moment!\n",
-    "        raise NotImplementedError\n",
     "\n",
     "    def _solve_LR_prob(self, idxX, idxY, rank_level, rankD, eps=0.04):\n",
     "        \n",
@@ -2203,7 +2228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "128e3693-3824-4b5c-990c-d5f1ddb8512f",
    "metadata": {},
    "outputs": [
@@ -2212,20 +2237,7 @@
      "output_type": "stream",
      "text": [
       "Optimized rank-annealing schedule: [2, 1250]\n",
-      "[2, 1250]\n",
-      "Iteration: 0\n",
-      "Iteration: 25\n",
-      "Iteration: 50\n",
-      "Last level, rank chunk-size 1250 with 2 iterations to completion.\n",
-      "0/2 of final-level iterations to completion\n",
-      "Iteration: 0\n",
-      "Iteration: 25\n",
-      "Iteration: 50\n",
-      "1/2 of final-level iterations to completion\n",
-      "Iteration: 0\n",
-      "Iteration: 25\n",
-      "Iteration: 50\n",
-      "HR-OT cost: 17.542333602905273\n"
+      "[2, 1250]\n"
      ]
     }
    ],
@@ -2312,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "e3b186fc",
    "metadata": {},
    "outputs": [
@@ -2325,7 +2337,8 @@
       "Iteration: 0\n",
       "Iteration: 25\n",
       "Iteration: 50\n",
-      "Iteration: 75\n"
+      "Iteration: 75\n",
+      "FRLC cost: 23.262449264526367\n"
      ]
     }
    ],
@@ -2391,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "426f953d",
    "metadata": {},
    "outputs": [
@@ -2419,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "483129b1",
    "metadata": {},
    "outputs": [
