--- a/coco.ipynb
+++ b/coco.ipynb
@@ -1463,10 +1463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "4f4e86dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'FRLC_opt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mHierarchicalRefinementOT\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m    Classe pour effectuer le raffinage hiérarchique OT en JAX.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m      6\u001b[0m                  C: jnp\u001b[38;5;241m.\u001b[39mndarray,\n\u001b[0;32m      7\u001b[0m                  rank_schedule: List[\u001b[38;5;28mint\u001b[39m],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m                  num_processes: Union[\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;66;03m# Matrice de coût et paramètres initiaux\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[1], line 8\u001b[0m, in \u001b[0;36mHierarchicalRefinementOT\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mHierarchicalRefinementOT\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m    Classe pour effectuer le raffinage hiérarchique OT en JAX.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m      6\u001b[0m                  C: jnp\u001b[38;5;241m.\u001b[39mndarray,\n\u001b[0;32m      7\u001b[0m                  rank_schedule: List[\u001b[38;5;28mint\u001b[39m],\n\u001b[1;32m----> 8\u001b[0m                  solver: Callable \u001b[38;5;241m=\u001b[39m FRLC_opt,\n\u001b[0;32m      9\u001b[0m                  solver_params: Union[Dict[\u001b[38;5;28mstr\u001b[39m, Any], \u001b[38;5;28;01mNone\u001b[39;00m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m     10\u001b[0m                  device: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     11\u001b[0m                  base_rank: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m,\n\u001b[0;32m     12\u001b[0m                  clustering_type: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msoft\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     13\u001b[0m                  plot_clusterings: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     14\u001b[0m                  parallel: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     15\u001b[0m                  num_processes: Union[\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;66;03m# Matrice de coût et paramètres initiaux\u001b[39;00m\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mC \u001b[38;5;241m=\u001b[39m jnp\u001b[38;5;241m.\u001b[39marray(C)                     \u001b[38;5;66;03m# Coût en tant que jnp.array\u001b[39;00m\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrank_schedule \u001b[38;5;241m=\u001b[39m rank_schedule\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'FRLC_opt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class HierarchicalRefinementOT:\n",
     "    \"\"\"\n",
@@ -1682,7 +1695,6 @@
     "                gamma=self.solver_params['gamma'],\n",
     "                r=rank_level,\n",
     "                max_iter=self.solver_params['max_iter'],\n",
-    "                device=self.device,\n",
     "                min_iter=self.solver_params['min_iter'],\n",
     "                max_inneriters_balanced=self.solver_params['max_inneriters_balanced'],\n",
     "                max_inneriters_relaxed=self.solver_params['max_inneriters_relaxed'],\n",
