coco_final_output

--- a/coco.ipynb
+++ b/coco.ipynb
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3fc0dfb7",
    "metadata": {},
    "outputs": [
@@ -1800,7 +1800,12 @@
       "0/1 itérations finalistes\n",
       "Iteration: 0\n",
       "Iteration: 25\n",
-      "Iteration: 50\n"
+      "Iteration: 50\n",
+      "1/1 itérations finalistes\n",
+      "Iteration: 0\n",
+      "Iteration: 25\n",
+      "Iteration: 50\n",
+      "HR-OT cost: 18.2893009185791\n"
      ]
     }
    ],
