--- a/coco.ipynb
+++ b/coco.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fae84cb9",
+   "metadata": {},
+   "source": [
+    "<h1>Tutorial: Hierarchical Refinement for Large-Scale Optimal Transport"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd9cbc5c",
+   "metadata": {},
+   "source": [
+    "This tutorial presents the implementation of the Hierarchical Refinement (HiRef) algorithm from the paper \"Hierarchical Refinement: Optimal Transport to Infinity and Beyond\" (Halmos et al., 2025). This algorithm solves the optimal transport (OT) problem for two large sets of points with linear memory complexity. The key idea is to exploit the fact that low-rank optimal transport solutions co-cluster each point with its image under the (bijective) Monge map. HiRef therefore recursively constructs a multi-scale partition of the data by solving a hierarchy of low-rank OT sub-problems, ultimately leading to a complete bijective coupling. Below we detail the implementation steps, highlighting methodological choices."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "945f7bfd",
@@ -48,10 +64,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "084270ae",
+   "metadata": {},
+   "source": [
+    "The tutorial begins by loading a set of images (here a subset of 5000 images from COCO/ImageNet). Each image is transformed (resized to 224×224 and converted to a tensor) then passed through a pre-trained neural network (ResNet-50). The final classification layer (model.fc = Identity) is removed to obtain only the feature vectors (embeddings) of dimension 2048."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8173d8ca",
    "metadata": {},
    "source": [
-    "You can also directly go to part 3 if you want to start directly from the embeddings."
+    "To save time during future executions, we save the embeddings with pickle. In the end, we obtain an embeddings tensor of shape (5000, 2048) containing the vector representations of our images. So you can also directly go to part 3 if you want to start directly from the embeddings."
    ]
   },
   {
@@ -427,6 +451,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed818250",
+   "metadata": {},
+   "source": [
+    "In the paper, OT is formulated between two uniform distributions of the same size, where the problem is actually an assignment problem (Monge bijection). To reproduce this, we start with the embeddings extracted from 5000 images and do:  \n",
+    "Random permutation: We create a random index vector of size 5000 (fixed with a seed for reproducibility).  \n",
+    "Separation into two equal subsets:We take the first 2500 entries of this permutation to form set X and the next 2500 for Y.  \n",
+    "Thus, |X| = |Y| = 2500, with the same uniform measure a priori.\n",
+    "These two sets X and Y of 2048-dim vectors will be the input points for the HiRef algorithm. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "155a4ddd",
@@ -459,7 +495,15 @@
    "id": "3baa4c1e",
    "metadata": {},
    "source": [
-    "# 4."
+    "# 4. Sinkhorn with epsilon-schedule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cd34493",
+   "metadata": {},
+   "source": [
+    "Entropic optimal transport with the Sinkhorn algorithm is the foundation on which we'll build. Here's an implementation of the log-stabilized Sinkhorn with the utility functions for optimal transport."
    ]
   },
   {
@@ -1092,6 +1136,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "750e3726",
+   "metadata": {},
+   "source": [
+    "<h2> Rank annealing schedule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc954f0c",
+   "metadata": {},
+   "source": [
+    "HiRef works according to a hierarchy of sub-problems with increasing ranks. It is crucial to determine a \"rank schedule\" such that the cluster size is progressively reduced until the final rank.  \n",
+    "The code automatically calculates an optimal rank annealing schedule by factorizing the size n = 2500 into products of factors, while respecting a maximum depth. For this:\n",
+    "\n",
+    ".We look for a largest possible factor Q (by default 2048) of n, corresponding to the terminal rank (before switching to 1-1 correspondence). Here, for n=2500, we get Q = 1250.  \n",
+    ".We solve a small dynamic program (rank_annealing__min_sum_partial_products_with_factors) that factorizes n / Q = 2 into at most k factors (here depth 6) with a constraint on the intermediate rank (here max_rank=64).  \n",
+    "For ndivQ=2 and k=6, the only factorization is trivially 2 = 2.\n",
+    ".We thus obtain the final sorted schedule, excluding 1: rank_schedule = [2, 1250]. In other words, we will first process an OT at rank 2 on 2500 points, then an OT at rank 1250 on each subset.  \n",
+    ".The code verifies that the product of the ranks gives n (here 2×1250=2500).\n",
+    "\n",
+    "This schedule corresponds  to the \"factor decomposition\" used in the paper to refine the resolution. At each step i (rank r_i), we will divide the points into r_i clusters of the same capacity, decreasing the size of the sub-problems."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "3fe4033a",
@@ -1223,6 +1292,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab919ac2",
+   "metadata": {},
+   "source": [
+    "The following function allows representing the squared Euclidean cost matrix in factorized form to avoid storing the full matrix, which is crucial for scaling the algorithm."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "aa9fe3a1",
@@ -1316,6 +1393,29 @@
     "    A2_tilde = jnp.einsum(\"ij,ik->ijk\", A2, A2).reshape(n, r * r)\n",
     "\n",
     "    return A1_tilde, A2_tilde"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "375f6faf",
+   "metadata": {},
+   "source": [
+    "<h2> Implementation of the FRLC Solver (Low-Rank Optimal Transport)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00db9e5c",
+   "metadata": {},
+   "source": [
+    "To solve the low-rank OT sub-problems, the tutorial uses the FRLC (Factorized Regularized Low-rank Coupling) solver described in Halmos et al. (2024).  \n",
+    " This solver parameterizes the transport matrix T as a product Q Λ Rᵀ of rank r, and optimizes via entropic gradient descent. Concretely:\n",
+    "\n",
+    "If sq_Euclidean=True, we use a factorization of the squared Euclidean cost via the compute_lr_sqeuclidean_matrix function, otherwise we use a factorization based on utils__low_rank_distance_factorization.  \n",
+    "The FRLC_opt solver takes as input either the dense cost matrix C_XY, or C_factors for the cost, as well as the uniform histograms a=b.  \n",
+    "It returns the normalized Q, R matrices (size n×r) and the diagonal Λ.\n",
+    "The obtained Q and R factors contain the clustering information in the form of \"soft\" vectors (positive real values per cluster).  \n",
+    "This FRLC solver is the instance of Low-rank OT used at each hierarchical step in the paper. It computes an approximate OT coupling of rank r and serves as a building block for HiRef."
    ]
   },
   {
@@ -1432,6 +1532,41 @@
     "            gR = R.T @ one_N2\n",
     "            T = jnp.diag(gR)\n",
     "        return Q, R, T, errs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07818c0b",
+   "metadata": {},
+   "source": [
+    "<h2> Implementation of Hierarchical Refinement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1814682",
+   "metadata": {},
+   "source": [
+    "The central algorithm consists of recursively applying these OT sub-problems hierarchically. The code implements the HierarchicalRefinementOT class that performs the following loop:\n",
+    "\n",
+    "We initialize a single global \"cluster\" (idxX = [0..N-1], idxY = [0..N-1]) covering everything.\n",
+    "For each level i of the rank schedule rank_schedule[i]:\n",
+    "\n",
+    "For each pair of clusters (idxX, idxY) obtained at the previous level, we solve an OT at rank r = rank_schedule[i]. If we have provided C explicitly, we directly index the cost sub-matrix; otherwise we calculate a cost factorization via _solve_LR_prob.  \n",
+    "This produces Q, R for this sub-problem.\n",
+    "We transform the Q (for X) and R (for Y) factors into concrete partitions of these points. With soft clustering:\n",
+    "\n",
+    "\"Soft\" clustering : we impose equal capacities in each cluster. For each sub-cluster z from 0 to r−1, we choose the capacity = N / (r_0 * ... * r_i) points with the highest \"affinity\" in Q and R (via topk).  \n",
+    "These points form new sub-clusters (idxX_z, idxY_z) of equal size. We iterate until all points are assigned.\n",
+    "\n",
+    "This co-clustering step is the concrete application of the theoretical result: the columns of Q and R indicate the probabilistic co-assignment of a point X_i to a sub-partition z and of point Y_j to the same sub-partition z.  \n",
+    "The key invariant of the paper is that, at the optimal rank, these factors cluster together the pairs {X_i, Monge(X_i)}. Here, we use this invariant to divide our problem.\n",
+    "We update the list of clusters F_tp1 containing all the new sub-clusters (idxX_z, idxY_z) obtained. Then we repeat at the next level.\n",
+    "When we reach the last level, each cluster is of size 1×1 and corresponds to a single pair of points. The final coupling is given by the set of pairs (idxX, idxY).\n",
+    "\n",
+    "\n",
+    "\n",
+    "At the end, we have a list Monge_clusters = [(x_0,y_0), (x_1,y_1), …] ensuring a bijective correspondence between X and Y. The paper shows that this procedure does provide a full-rank optimal transport solution, while never having stored a complete cost matrix."
    ]
   },
   {
@@ -1765,6 +1900,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84d1363f",
+   "metadata": {},
+   "source": [
+    "<h2> Execution and Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1290a60a",
+   "metadata": {},
+   "source": [
+    "We build the rank schedule and then launch HiRef as follows:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "3fc0dfb7",
@@ -1841,7 +1992,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "lsf",
    "language": "python",
    "name": "python3"
   },
@@ -1855,7 +2006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
