text version finale

--- a/coco.ipynb
+++ b/coco.ipynb
@@ -1974,20 +1974,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc80c7d2",
+   "cell_type": "markdown",
+   "id": "aab2d468",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![Benchmark](bench.png)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81d2bed2",
+   "cell_type": "markdown",
+   "id": "81d88247",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As we can see on this benchmark from the article, our result of 18.28 is very close even though our dataset is different. This can be explained by :  \n",
+    ". The use of the same feature extractor (ResNet)  \n",
+    ". Also it operates solely on distances in the embedding space."
+   ]
   }
  ],
  "metadata": {
